[alaeners]set a root view controller

--- a/myBibs/Resources/Strings/Localizable.strings
+++ b/myBibs/Resources/Strings/Localizable.strings
@@ -18,6 +18,7 @@
 "button.list" = "listar";
 
 //Description Strings
+"description.login" = "seja bem vindo ao myBib!";
 
 //Placeholder Strings
 "placeholder.user" = "e-mail";
